# knecht

./: .gitignore  .rules  BEADS_MIGRATION.md  Cargo.toml  LICENSE  MIGRATION.md  MIKADO_EXAMPLES.md  NEXT_TASK_HANDOFF.md  README.md  SPEC_DRAFT_1.md  SPEC_V2_TDD.md
.claude/: settings.json
.claude/commands/: journal.md  knecht.md  reflect.md  upstream.md
.githooks/: post-commit  pre-commit
.knecht/: blockers  pain  sentry-mapping  tasks
.knecht/tasks/: 0a30c0  1  10  101  102  103  104  105  106  106kyn  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+242 more)
docs/: MIGRATING_FROM_BEADS.md  task-49-format-analysis.md
hooks/: pre-commit
scripts/: cw  migrate-to-csv.sh
src/: main.rs  serializer.rs  task.rs
tests/: acceptance_criteria_tests.rs  add_tests.rs  block_tests.rs  cli_tests.rs  csv_tests.rs  delete_tests.rs  deliver_tests.rs  done_tests.rs  init_tests.rs  integration_test.rs  list_tests.rs  migration_tests.rs  misc_tests.rs  next_tests.rs  pain_tests.rs  show_tests.rs  start_tests.rs  test_helpers.rs  unit_tests.rs  update_tests.rs
tests/common/: mod.rs
