[package]
name = "knecht"
version = "0.1.0"
edition = "2024"
default-run = "knecht"

[lib]
name = "knecht"
path = "src/task.rs"

[[bin]]
name = "knecht"
path = "src/main.rs"

[[bin]]
name = "beads2knecht"
path = "src/bin/beads2knecht.rs"

[[bin]]
name = "sentry2knecht"
path = "src/bin/sentry2knecht.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
